--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -4,17 +4,13 @@ const metaInfo = {
   description: 'トップページのディスクリプション',
   path: './'
 }
-
 %>
 
-<%- include(metaInfo.path + 'common/_header', {metaInfo: metaInfo} ) %>
+<%- include(metaInfo.path + 'common/_header', {metaInfo: metaInfo} ); %>
 
-<!-- content -->
-<div class="content">
-
-<h1>Hello ejs</h1>
-<p>トップページのテキスト</p>
-
-</div><!-- /content -->
+<main>
+  <h1>Hello ejs</h1>
+  <p>トップページのテキスト</p>
+</main>
 
 <%- include(metaInfo.path + 'common/_footer', {metaInfo: metaInfo} ) %>
