--- a/src/ejs/common/_header.ejs
+++ b/src/ejs/common/_header.ejs
@@ -1,71 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <!--Required meta tags-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%= metaInfo.title %></title>
   <meta name="description" content="<%= metaInfo.description %>">
-  <meta property="og:title" content="ページのタイトル" />
-  <meta property="og:type" content="website　か　blog　か　article" />
-  <meta property="og:description" content="ページの簡単な説明" />
-  <meta property="og:url" content="ページのURL" />
-  <meta property="og:site_name" content="サイトのタイトル" />
-  <meta property="og:image" content="サムネイル画像のURL" />
-  <!--favicon-->
-  <link rel="icon" href="<%= metaInfo.path %>/favicon.ico">
-  <!-- スマホ用アイコン -->
-  <link rel="apple-touch-icon" sizes="180x180" href="<%= metaInfo.path %>/apple-touch-icon.png">
-  <!-- fontawesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- css -->
-  <link rel="stylesheet" href="<%= metaInfo.path %>/dist/css/style.css">
+  <link rel="stylesheet" href="<%= metaInfo.path %>dist/css/style.css">
 </head>
 <body>
-
-<!--グローバルナビゲーション-->
-<header id="header" class="header">
-<div class="w1200">
-<div class="flex-between">
-  <h1 class="logo-img">
-    <a href="#"><img src="img/logo_header.jpg" alt="SAMPLE"></a>
-  </h1>
-  <nav role="navigation" id="gNav" class="nav-global">
-    <ul class="flexbox">
-      <li><a href="">TOP</a></li>
-      <li><a href="">MENU1</a></li>
-      <li><a href="">MENU2</a></li>
-      <li><a href="">MENU3</a></li>
-      <li><a href="">MENU4</a></li>
-    </ul>
-    </nav>
-  </div><!-- /.flexbox-->
-</div><!-- /.w1200-->
-<!--/.グローバルナビゲーション-->
-
-<!--ドロワー-->
-<div id="drawer" class="c-drawer">
-  <input id="drawer-checkbox" class="drawer-checkbox" type="checkbox">
-  <label id="drawer-icon" class="c-drawer__icon" for="drawer-checkbox"><span></span></label>
-  <label id="drawer-close" class="c-drawer__close" for="drawer-checkbox"></label>
-  <div id="drawer-content" class="c-drawer__content">
-    <div class="c-drawer__logo"><a href="">LOGO</a></div>
-    <nav class="c-drawer__nav">
-      <ul class="c-drawer__list">
-        <li class="c-drawer__list-ttl">DRAWER MENUS</li>
-        <li class="c-drawer__list-item"><a href="">HOME</a></li>
-        <li class="c-drawer__list-item"><a href="">MENU1</a></li>
-        <li class="c-drawer__list-item"><a href="">MENU2</a></li>
-        <li class="c-drawer__list-item"><a href="">MENU3</a></li>
-        <li class="c-drawer__list-item"><a href="">MENU4</a></li>
-      </ul>
-    </nav>
-  </div><!-- /.drawer-content -->
-</div><!-- /.drawer -->
-<!--/.ドロワー-->
-
-</header><!-- /#header.header -->
