[update]meta info

--- a/src/ejs/common/_header.ejs
+++ b/src/ejs/common/_header.ejs
@@ -1,10 +1,4 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= metaInfo.title %></title>
-  <meta name="description" content="<%= metaInfo.description %>">
-  <link rel="stylesheet" href="<%= metaInfo.path %>dist/css/style.css">
-</head>
+  <%- include('../organisms/_head') %> 
 <body>
