--- a/src/scss/foundation/_reset.scss
+++ b/src/scss/foundation/_reset.scss
@@ -53,12 +53,13 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-a:hover {
-  cursor: pointer;
-  opacity: 0.7;
-  text-decoration: none;
+  &:hover {
+    @media (hover: hover) {
+      cursor: pointer;
+      opacity: 0.7;
+      text-decoration: none;
+    }
+  }
 }
 
 img {
