--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 @import "setting/**";
 @import "foundation/**";
+@import "functions/**";
 @import "mixin/**";
 @import "layout/*";
 @import "component/**";
