[update]chache busting
css / js にcahce bustingを付与

--- a/src/ejs/organisms/_head.ejs
+++ b/src/ejs/organisms/_head.ejs
@@ -36,5 +36,5 @@
    <!-- jQuery -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- css -->
-  <link rel="stylesheet" href="<%= metaInfo.path %>dist/style.css">
+  <link rel="stylesheet" href="<%= metaInfo.path %>dist/css/app.css?rev">
 </head>
