--- a/src/scss/component/_drawer.scss
+++ b/src/scss/component/_drawer.scss
@@ -1,137 +1,138 @@
-.c-drawer {
-  margin-left: 20px;
-  position: relative;
-  @media only screen and (min-width: 768px) {
+.c-hamburger {
+  height: 26px;
+  outline: none;
+  padding: 0;
+  position: fixed;
+  right: 25px;
+  top: 17px;
+  transition: transform 0.3s ease-in-out;
+  width: 32.5px;
+  z-index: 5;
+  &:focus {
+    outline: none;
+  }
+  @include mq-min(w768) {
     display: none;
-  }
-  &__checkbox {
-    display: none;
-  }
-  &__icon {
-    cursor: pointer;
-    display: inline-block;
-    height: 12px;
-    position: fixed;
-    right: 18px;
-    top: 26px;
-    width: 18px;
-    z-index: 41;
-    span {
-      background: #000;
-      content: "";
-      cursor: pointer;
-      display: block;
-      height: 2px;
-      left: 50%;
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      transition: 0.3s ease-in-out;
-      width: 18px;
-      &::before,
-      &::after {
-        background: #000;
-        content: "";
-        cursor: pointer;
-        display: block;
-        height: 2px;
-        left: 50%;
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        transition: 0.3s ease-in-out;
-        width: 18px;
-      }
-      &::before {
-        top: 7px;
-      }
-      &::after {
-        top: -5px;
-      }
-    }
-  }
-  &__content {
-    background: #fff;
-    height: 100%;
-    overflow: auto;
-    padding-top: 68px;
-    position: fixed;
-    right: 0;
-    top: 0;
-    transform: translateX(100%);
-    transition: all 0.3s ease-in-out 0s;
-    width: 88%;
-    z-index: 40;
-  }
-  &__logo {
-    left: 25px;
-    position: absolute;
-    top: 10px;
-    width: 92px;
-  }
-  &__close {
-    background: #000;
-    display: none;
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    transition: all 0.3s ease-in-out 0s;
-    width: 100%;
-    z-index: 39;
-  }
-  &__list {
-    font-size: 1.3rem;
-    > li {
-      padding-bottom: 8px;
-      padding-top: 8px;
-    }
-  }
-  &__list-ttl {
-    background: #ececec;
-    font-size: 1.3rem;
-    font-weight: 700;
-    padding-left: 25px;
-  }
-  &__list-item {
-    margin-left: 25px;
-    padding-left: 20px;
-    &:not(:last-child) {
-      border-bottom: 1px solid $border-gray;
-    }
-    &--last {
-      border-bottom: 1px solid $border-gray;
-    }
   }
 }
 
-#drawer-checkbox:checked ~ #drawer-icon span {
-  background: rgba(51, 51, 51, 0);
+.c-hamburger_button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
 }
-#drawer-checkbox:checked ~ #drawer-icon span::before,
-#drawer-checkbox:checked ~ #drawer-icon span::after {
-  background: #555;
-  content: "";
-  display: block;
-  height: 100%;
-  left: 50%;
-  margin: -8% 0 0 -42%;
+
+.c-hamburger__line {
+  background-color: #666;
+  bottom: 0;
+  height: 2px;
+  left: 0;
+  margin: auto;
   position: absolute;
-  top: 50%;
-  width: 100%;
+  right: 0;
+  top: 0;
+  transition: inherit;
+  width: 32.5px;
+  &::before,
+  &::after {
+    background-color: inherit;
+    content: "";
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: inherit;
+    width: 100%;
+  }
 }
-#drawer-checkbox:checked ~ #drawer-icon span::before {
-  transform: rotate(-45deg);
+.is-drawerActive {
+  .c-hamburger__menu {
+    opacity: 1;
+    transition: opacity 0.3s;
+    visibility: visible;
+    z-index: 4;
+  }
 }
-#drawer-checkbox:checked ~ #drawer-icon span::after {
+.is-fixed {
+  overflow: hidden;
+}
+.c-hamburger__line::before {
+  top: -10px;
+}
+.c-hamburger__line::after {
+  top: 10px;
+}
+.c-hamburger[aria-expanded="true"] .c-hamburger__line {
+  background-color: transparent;
+  &::before,
+  &::after {
+    background-color: orange;
+    top: 0;
+  }
+}
+.c-hamburger[aria-expanded="true"] .c-hamburger__line::before {
   transform: rotate(45deg);
 }
-#drawer-checkbox:checked ~ #drawer-content {
-  box-shadow: 6px 0 25px rgba(#000, 0.16);
-  transform: translateX(0);
+
+.c-hamburger[aria-expanded="true"] .c-hamburger__line::after {
+  transform: rotate(-45deg);
 }
-#drawer-checkbox:checked ~ #drawer-close {
+
+.c-hamburger__menu {
+  background-color: rgba(#fff, 0.9);
+  bottom: 0;
+  height: 100vh;
+  opacity: 0;
+  overflow: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
+  visibility: hidden;
+  width: 100%;
+}
+
+.c-hamburger__header {
+  background: #fff;
+  height: 58px;
+  width: 100%;
+}
+.c-hamburger__logo {
+  padding-left: 25px;
+}
+.c-hamburger__item {
+  align-items: center;
+  display: flex;
+  height: 100%;
+}
+.c-hamburger__lists {
+  padding: 80px 0;
+  text-align: center;
+}
+.c-hamburger__list {
+  border-top: 1px solid #000;
+  &:last-child {
+    border-bottom: 1px solid #000;
+  }
+}
+.c-hamburger__link {
   display: block;
-  opacity: 0.3;
+  font-weight: 700;
+  padding: 20px 0;
+  position: relative;
+}
+.c-hamburger__link-en {
+  display: block;
+  font-size: 16px;
+  font-weight: bold;
+}
+.c-hamburger__btn {
+  margin-top: 30px;
+  padding: 0 20px;
+  .c-btn {
+    font-size: 15px;
+  }
 }
