--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,15 +1,21 @@
 // Global Navi //
 .l-header {
-  align-items: center; // IE対応要素の縦中央揃え
-  background: #2a7eb1;
+  background: #fff;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
-  display: flex;
-  height: 80px;
   width: 100%;
+  &__items {
+    align-items: center;
+    display: flex;
+    height: 60px;
+    justify-content: space-between;
+  }
 }
 
 .l-header--fixed {
   left: 0;
   position: fixed;
+  right: 0;
   top: 0;
+  width: 100%;
+  z-index: 20;
 }
