--- a/src/ejs/common/_footer.ejs
+++ b/src/ejs/common/_footer.ejs
@@ -1,3 +1,3 @@
-<script src="<%= metaInfo.path %>dist/js/bundle.js"></script>
+<script src="<%= metaInfo.path %>dist/js/bundle.js?ver"></script>
 </body>
 </html>
